COP-3847 - review improvements

--- a/artificial-intelligence/ai-service/api-reference/api.yml
+++ b/artificial-intelligence/ai-service/api-reference/api.yml
@@ -794,7 +794,6 @@ paths:
       - $ref: '#/components/parameters/pageNumber'
       - $ref: '#/components/parameters/sort'
       - $ref: '#/components/parameters/fields'
-      - $ref: '#/components/parameters/expand'
       - $ref: '#/components/parameters/header_xTotalCount'
     get:
       summary: Get tools
@@ -812,6 +811,8 @@ paths:
               examples:
                 Agents Response:
                   $ref: '#/components/examples/SlackNativeToolsResponse'
+        '400':
+          $ref: '#/components/responses/400_resp_common'
         '401':
           $ref: '#/components/responses/401_resp_common'
         '403':
@@ -837,7 +838,6 @@ paths:
         - $ref: '#/components/parameters/pageNumber'
         - $ref: '#/components/parameters/sort'
         - $ref: '#/components/parameters/fields'
-        - $ref: '#/components/parameters/expand'
         - $ref: '#/components/parameters/header_xTotalCount'
       summary: Get tools
       operationId: POST-ai-search-tools
@@ -854,6 +854,8 @@ paths:
               examples:
                 Tools Response:
                   $ref: '#/components/examples/SlackNativeToolsResponse'
+        '400':
+          $ref: '#/components/responses/400_resp_common'
         '401':
           $ref: '#/components/responses/401_resp_common'
         '403':
@@ -1129,7 +1131,7 @@ components:
           properties:
             botToken:
               type: string
-              description: OAuth token used to authenticate the Slack bot within the specified workspace. Required for performing authorized actions on behalf of the bot. Format usually starts with `xoxb-...`.
+              description: OAuth token used to authenticate the Slack bot within the specified workspace. Required for performing authorized actions on behalf of the bot. Format usually starts with `xoxb-...`. It is required only for creation, for update operation it can be omitted.
           required:
             - botToken
     SlackNativeToolRequest:
