COP-3857 - review improvements

--- a/artificial-intelligence/ai-service/api-reference/api.yml
+++ b/artificial-intelligence/ai-service/api-reference/api.yml
@@ -1026,7 +1026,6 @@ paths:
       - $ref: '#/components/parameters/pageNumber'
       - $ref: '#/components/parameters/sort'
       - $ref: '#/components/parameters/fields'
-      - $ref: '#/components/parameters/expand'
       - $ref: '#/components/parameters/header_xTotalCount'
     get:
       summary: Get tokens
@@ -1043,6 +1042,8 @@ paths:
               examples:
                 Tokens Response:
                   $ref: '#/components/examples/TokensResponse'
+        '400':
+          $ref: '#/components/responses/400_resp_common'
         '401':
           $ref: '#/components/responses/401_resp_common'
         '403':
@@ -1068,7 +1069,6 @@ paths:
         - $ref: '#/components/parameters/pageNumber'
         - $ref: '#/components/parameters/sort'
         - $ref: '#/components/parameters/fields'
-        - $ref: '#/components/parameters/expand'
         - $ref: '#/components/parameters/header_xTotalCount'
       summary: Get tokens
       operationId: POST-ai-search-tokens
@@ -1084,6 +1084,8 @@ paths:
               examples:
                 Tokens Response:
                   $ref: '#/components/examples/TokensResponse'
+        '400':
+          $ref: '#/components/responses/400_resp_common'
         '401':
           $ref: '#/components/responses/401_resp_common'
         '403':
@@ -1231,8 +1233,6 @@ paths:
           $ref: '#/components/responses/401_resp_common'
         '403':
           $ref: '#/components/responses/403_resp_common'
-        '404':
-          $ref: '#/components/responses/404_resp_common'
       description: |-
         ![Preview](https://res.cloudinary.com/saas-ag/image/upload/v1752824268/emporix/icons/preview_api1.png)
         Deletes tokens by given Id. In order to delete a token, it cannot be used by any of the existing agents.
@@ -1504,9 +1504,14 @@ components:
         authorizationHeaderName:
           type: string
           description: Name of the header required for authorization e.g. `Authorization`
-        authorizationHeaderTokenId:
-          type: string
-          description: Id of the token which should store secret for authorization header.
+        authorizationHeaderToken:
+          type: object
+          properties:
+            id:
+              type: string
+              description: Id of the token which should store secret for authorization header.
+          required:
+            - id
       required:
         - url
     SelfHostedParamsResponse:
@@ -1561,12 +1566,17 @@ components:
           properties:
             provider:
               $ref: '#/components/schemas/ApiKeyLlmProvider'
-            tokenId:
-              type: string
-              description: Id of the token which should store secret representing api key.
+            token:
+              type: object
+              properties:
+                id:
+                  type: string
+                  description: Id of the token which should store secret representing api key.
+              required:
+                - id
           required:
             - provider
-            - tokenId
+            - token
     ApiKeyLlmResponse:
       allOf:
         - $ref: '#/components/schemas/ApiKeyLlmRequest'
@@ -1608,6 +1618,14 @@ components:
               description: Unique identifier of the token.
             metadata:
               $ref: '#/components/schemas/MetadataResponse'
+
+    IdWrapper:
+      type: object
+      properties:
+        id:
+          type: string
+      required:
+        - id
 
     AgentCollaborations:
       type: array
@@ -1669,11 +1687,6 @@ components:
                 description: markers that allow to categorise the agent.
             mcpServers:
               $ref: '#/components/schemas/McpServers'
-            nativeToolIds:
-              type: array
-              items:
-                type: string
-              description: Id of the native tools.
             enabled:
               type: boolean
               description: Whether the agent is enabled.
@@ -1730,6 +1743,11 @@ components:
         - $ref: '#/components/schemas/BaseForAgentRequestAndResponse'
         - type: object
           properties:
+            nativeTools:
+              type: array
+              items:
+                $ref: '#/components/schemas/IdWrapper'
+              description: Id of the native tools.
             llmConfig:
               oneOf:
                 - $ref: '#/components/schemas/EmporixLlm'
@@ -2384,7 +2402,8 @@ components:
         userPrompt: "You are an complaint agent for checking emails and do some action"
         llmConfig:
           model: GPT-4.1
-          tokenId: openai-token
+          token:
+            id: openai-token
           provider: openai
           maxTokens: 100000
           temperature: 0.2
