--- a/checkout/cart/api-reference/api.yml
+++ b/checkout/cart/api-reference/api.yml
@@ -2345,7 +2345,7 @@ paths:
           description: 'If set to `true`, a fully calculated cart is returned.'
         - name: zipCode
           in: query
-          description: The zip code of the shipping address, used for tax calculations, shipping cost estimations, and pricing. Must be provided together with `countryCode` if either of the parameters is specified. If the cart already has both (`zipCode` and `countyCode`) address values, the request parameters are ignored. If the cart is missing either value, request parameters are used to fill the missing one.
+          description: The zip code of the shipping address, used for tax calculations, shipping cost estimations, and pricing. Must be provided together with `countryCode` if either of the parameters is specified. If the cart already has both (`zipCode` and `countryCode`) address values, the request parameters are ignored. If the cart is missing either value, request parameters are used to fill the missing one.
           required: false
           schema:
             type: string
@@ -2353,7 +2353,7 @@ paths:
             maxLength: 9
         - name: countryCode
           in: query
-          description: The country code of the shipping address, used for tax calculations, shipping cost estimations, and pricing. Must be provided together with `zipCode` if either of the parameters is specified. If the cart already has both (`zipCode` and `countyCode`) address values, the request parameters are ignored. If the cart is missing either value, request parameters are used to fill the missing one.
+          description: The country code of the shipping address, used for tax calculations, shipping cost estimations, and pricing. Must be provided together with `zipCode` if either of the parameters is specified. If the cart already has both (`zipCode` and `countryCode`) address values, the request parameters are ignored. If the cart is missing either value, request parameters are used to fill the missing one.
           required: false
           schema:
             type: string
