COP-3919 fix wrong type definition

--- a/checkout/cart/api-reference/api.yml
+++ b/checkout/cart/api-reference/api.yml
@@ -4271,7 +4271,7 @@ components:
                   currency:
                     type: string
                     description: Currency of the tax.
-                  value:
+                  amount:
                     type: number
                     description: Value of the tax.
     externalDiscountType:
